--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     root.append(currentElement);
 
 
-    if(randomNumber % 2 == 0) {
+    if(randomNumber % 2 === 0) {
         const element = document.createElement('h2');
         root.append(element.innerHTML = "The random number generated is even");
     } else {
